--- a/helf-react/src/CSS/style.css
+++ b/helf-react/src/CSS/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font: 24px/30px 'Noto Sans CJK KR', Noto Sans KR, sans-serif;
 }
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:600,400,300);
@@ -130,4 +130,4 @@ body {
 .circle-small .text .small {
   font-size: 12px;
   color: #648192;
-}
+} */
